AoP permission checks + fix router in frontend
