# backend/src/main/java/github/mewgrammer/taskbook/api/model/CreateTaskDto.java
@@ -1,15 +1,7 @@
 package github.mewgrammer.taskbook.api.model;
 
 import github.mewgrammer.taskbook.model.TaskState;
-import lombok.*;
 
-import javax.validation.constraints.NotBlank;
+public record CreateTaskDto(String title, String description, TaskState status) {
 
-@Data
-@AllArgsConstructor
-@NoArgsConstructor
-public class CreateTaskDto {
-    @NotBlank private String title;
-    private String description;
-    private TaskState status = TaskState.PENDING;
 }
