# backend/src/main/kotlin/github/mewgrammer/taskbook/api/controller/TaskController.kt
@@ -2,19 +2,16 @@ package github.mewgrammer.taskbook.api.controller
 
 import github.mewgrammer.taskbook.api.controller.model.UpdateTaskDto
 import github.mewgrammer.taskbook.api.model.CreateTaskDto
+import github.mewgrammer.taskbook.api.model.Paginated
+import github.mewgrammer.taskbook.api.model.PaginationDto
 import github.mewgrammer.taskbook.api.model.TaskDto
 import github.mewgrammer.taskbook.mapping.TaskMapper
-import github.mewgrammer.taskbook.security.annotations.ReadPrivilege
-import github.mewgrammer.taskbook.security.annotations.UserAuthorization
-import github.mewgrammer.taskbook.security.annotations.WritePrivilege
+import github.mewgrammer.taskbook.security.annotations.*
+import github.mewgrammer.taskbook.security.model.Privilege
+import github.mewgrammer.taskbook.security.model.Role
 import github.mewgrammer.taskbook.service.TaskService
-import io.swagger.v3.oas.annotations.Operation
-import io.swagger.v3.oas.annotations.media.Content
-import io.swagger.v3.oas.annotations.media.Schema
-import io.swagger.v3.oas.annotations.responses.ApiResponse
-import io.swagger.v3.oas.annotations.responses.ApiResponses
 import lombok.AllArgsConstructor
-import org.springframework.http.HttpStatus
+import org.springdoc.api.annotations.ParameterObject
 import org.springframework.security.core.Authentication
 import org.springframework.web.bind.annotation.*
 import java.util.UUID
@@ -26,23 +23,22 @@ import javax.validation.Valid
 class TaskController(private val taskMapper: TaskMapper, private val taskService: TaskService) : TaskApi {
 
     @GetMapping
-    @ReadPrivilege
-    override fun getTasks(auth: Authentication): List<TaskDto> {
-        return taskService.getTasks(auth).map { taskMapper.convertToDto(it) }.toList()
+    @HasPrivilege(Privilege.READ)
+    override fun getTasks(@Valid @ParameterObject pagination: PaginationDto, auth: Authentication): Paginated<TaskDto> {
+        val page = taskService.getTasks(pagination, auth).map { taskMapper.convertToDto(it)  }
+        return Paginated.of(page);
     }
 
 
     @PostMapping
-    @UserAuthorization
-    @WritePrivilege
+    @HasAccess(Role.USER, Privilege.WRITE)
     override fun addTask(@Valid @RequestBody createTaskData: CreateTaskDto): TaskDto {
         val task = taskMapper.convertToEntity(createTaskData)
         return taskMapper.convertToDto(taskService.addTask(task))
     }
 
     @PutMapping("{id}")
-    @UserAuthorization
-    @WritePrivilege
+    @HasAccess(Role.USER, Privilege.WRITE)
     override fun updateTask(
         @PathVariable id: UUID,
         @Valid @RequestBody updateTaskData: UpdateTaskDto,
@@ -52,9 +48,8 @@ class TaskController(private val taskMapper: TaskMapper, private val taskService
     }
 
     @DeleteMapping("{id}")
-    @UserAuthorization
-    @WritePrivilege
-    override fun deleteTask(@PathVariable id: Long) {
+    @HasAccess(Role.USER, Privilege.WRITE)
+    override fun deleteTask(@PathVariable id: UUID) {
         taskService.deleteTask(id)
     }
 }
